<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">图书</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">标题</string>
    <string name="find">发现</string>
    <string name="book">图书</string>
    <string name="club">读书俱乐部</string>
    <string name="poster">海报</string>
    <string name="info">信息</string>
    <string name="all">全部</string>
    <string name="trade">交易前</string>
    <string name="trading">交易中</string>
    <string name="traded">交易完成</string>
    <string name="loading">正在加载</string>
    <string name="readmore">查看更多</string>
    <string name="pulldown_refresh">下拉刷新</string>
    <string name="lastupdate_time">上次刷新时间</string>
    <string name="writecomment">写评论</string>
    <string name="send">发送</string>
    <string name="content_way">交易方式:</string>
    <string name="login_label_username">用户名:</string>
    <string name="login_label_password">密码:</string>
    <string name="login_label_signin">登录</string>
    <string name="login_register_link">没有帐号？ <a href="#">注册</a></string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="sure">确定</string>
    <string name="entercode">验证码</string>
    <string name="bad_info">信息无效或者不完整</string>
    <string name="register_password_input">密码:</string>
    <string name="register_password2_input">再次:</string>
    <string name="base_info">基本信息</string>
    <string name="setting">设置</string>
    <string name="baton">接力棒</string>
    <string name="release">发布</string>
    <string name="collect">收藏</string>
    <string name="about">关于</string>
    <string name="release_re">发布的资源</string>
    <string name="collect_re">收藏的资源</string>
    <string name="trade_re">交易的资源</string>
    <string name="add"><a href="#">添加</a></string>
    <string name="register_hit">数字或字母,长度&lt;15</string>
    <string name="interest">兴趣爱好:</string>
    <string name="area_prompt">县</string>
    <string name="city_prompt">市</string>
    <string name="province_prompt">省</string>
    <string name="exit">退出当前账号</string>
    <string name="content_time">发布时间：</string>
    <string name="content_user">发布者：</string>
    <string name="action_back">返回</string>
    <string name="no_internet">无网络连接~！</string>
    <string name="generic_server_down">连接服务器失败~！</string>
    <string name="generic_error">网络异常,请稍后再试~！</string>

</resources>