<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/action_bar_return" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue"
        android:scrollbars="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/login_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingBottom="10dp"
                android:paddingTop="21dp" >

                <EditText
                    android:id="@+id/username_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/qq_edit_login"
                    android:hint="@string/register_hit"
                    android:inputType="textVisiblePassword"
                    android:maxLength="15"
                    android:paddingLeft="45dp"
                    android:saveEnabled="true" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/username_edit"
                    android:layout_alignLeft="@id/username_edit"
                    android:layout_alignTop="@id/username_edit"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="7.0dp"
                    android:text="账号"
                    android:textColor="#ff3f3f3f"
                    android:textSize="16.0dp" />

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/username_edit"
                    android:layout_alignRight="@+id/username_edit"
                    android:layout_below="@+id/username_edit"
                    android:layout_marginRight="1.0dp"
                    android:background="@drawable/qq_edit_login"
                    android:hint="@string/register_hit"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:paddingLeft="45.0dp"
                    android:saveEnabled="true" />

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/password_edit"
                    android:layout_alignRight="@+id/TextView01"
                    android:layout_alignTop="@+id/password_edit"
                    android:gravity="center_vertical"
                    android:paddingLeft="7.0dp"
                    android:text="密码"
                    android:textColor="#ff3f3f3f"
                    android:textSize="16.0dp" />

                <EditText
                    android:id="@+id/password2_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/password_edit"
                    android:layout_alignRight="@+id/password_edit"
                    android:layout_below="@+id/password_edit"
                    android:layout_marginRight="1.0dp"
                    android:background="@drawable/qq_edit_login"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:paddingLeft="45.0dp"
                    android:saveEnabled="true" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/password2_edit"
                    android:layout_alignRight="@+id/TextView02"
                    android:layout_alignTop="@+id/password2_edit"
                    android:gravity="center_vertical"
                    android:paddingLeft="7.0dp"
                    android:text="重输"
                    android:textColor="#ff3f3f3f"
                    android:textSize="16.0dp" />

                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/password2_edit"
                    android:layout_alignRight="@+id/password2_edit"
                    android:layout_below="@+id/password2_edit"
                    android:layout_marginRight="1.0dp"
                    android:background="@drawable/qq_edit_login"
                    android:inputType="textVisiblePassword"
                    android:maxLength="30"
                    android:paddingLeft="45.0dp"
                    android:saveEnabled="true" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/email_edit"
                    android:layout_alignRight="@+id/TextView03"
                    android:layout_alignTop="@+id/email_edit"
                    android:gravity="center_vertical"
                    android:paddingLeft="7.0dp"
                    android:text="邮箱"
                    android:textColor="#ff3f3f3f"
                    android:textSize="16.0dp" />
            </RelativeLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_view"
                android:contentDescription="性别"
                android:orientation="horizontal" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="男" >
                </RadioButton>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="女" >
                </RadioButton>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/linearlayout_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radioGroup"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/interest"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/checkbox1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="教材" />

                    <CheckBox
                        android:id="@+id/checkbox2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="少儿" />

                    <CheckBox
                        android:id="@+id/checkbox3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="生活" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/checkbox4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="文艺" />

                    <CheckBox
                        android:id="@+id/checkbox5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="励志" />

                    <CheckBox
                        android:id="@+id/checkbox6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="科技" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/checkbox7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="人文" />

                    <CheckBox
                        android:id="@+id/checkbox8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="经管" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearlayout_interest"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="职业："
                    android:textColor="@color/white" />

                <Spinner
                    android:id="@+id/spinner_vocation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:entries="@array/vocation" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearlayout5"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="年龄："
                    android:textColor="@color/white" />

                <Spinner
                    android:id="@+id/spinner_age"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:entries="@array/age" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/linearlayout6"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/entercode" />

                <EditText
                    android:id="@+id/code_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/entercode"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearlayout7"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_orange"
                android:text="注册"
                android:textColor="@color/white" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/register_button"
                android:layout_marginBottom="20dp" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>